--- a/code/conf/reference.conf
+++ b/code/conf/reference.conf
@@ -186,7 +186,33 @@ play-authenticate {
         # clientId=
         # clientSecret=
     }
+	# The QQ settings
+    qq {
+        # Timeout in ms
+        timeout = 10000
 
+        redirectUri {
+            # Whether the redirect URI scheme should be HTTP or HTTPS (HTTP by default)
+            secure=false
+
+            # You can use this setting to override the automatic detection
+            # of the host used for the redirect URI (helpful if your service is running behind a CDN for example)
+            # host=yourdomain.com
+        }
+        authorizationUrl="https://graph.qq.com/oauth2.0/authorize"
+        accessTokenUrl="https://graph.qq.com/oauth2.0/token"
+        userInfoUrl="https://graph.qq.com/user/get_user_info?"
+        scope="get_user_info,list_album"
+
+        # Additional parameters - Read more about them here: https://developers.google.com/accounts/docs/OAuth2WebServer#offline
+        # accessType="offline"
+        # approvalPrompt="force"
+
+        # Get the credentials here: https://code.google.com/apis/console
+        # Remove leading '#' after entering:
+        # clientId=
+        # clientSecret=
+    }
     # The OpenID settings
     openid {
         # Timeout in ms
