--- a/samples/java/play-authenticate-simple-oauth/conf/play-authenticate/mine.conf
+++ b/samples/java/play-authenticate-simple-oauth/conf/play-authenticate/mine.conf
@@ -40,4 +40,23 @@ play-authenticate {
         # clientId=
         # clientSecret=
     }
+    
+    qq {
+        redirectUri {
+            # Whether the redirect URI scheme should be HTTP or HTTPS (HTTP by default)
+            secure=false
+
+            # You can use this setting to override the automatic detection
+            # of the host used for the redirect URI (helpful if your service is running behind a CDN for example)
+            # host=yourdomain.com
+        }
+
+        # Google credentials
+        # These are mandatory for using OAuth and need to be provided by you,
+        # if you want to use Google as an authentication provider.
+        # Get them here: https://code.google.com/apis/console
+        # Remove leading '#' after entering
+        # clientId="101073485"
+        # clientSecret="a4ec97fad0056b550e85c550f1862a54"
+    }
 }
