add google client

--- a/samples/java/play-authenticate-simple-oauth/conf/play-authenticate/mine.conf
+++ b/samples/java/play-authenticate-simple-oauth/conf/play-authenticate/mine.conf
@@ -37,8 +37,8 @@ play-authenticate {
         # if you want to use Google as an authentication provider.
         # Get them here: https://code.google.com/apis/console
         # Remove leading '#' after entering
-        # clientId=
-        # clientSecret=
+        clientId="468505912835-ddo0nb9jp4epi8g2qu7vv45mfq7ggtc1.apps.googleusercontent.com"
+        clientSecret="toFfB20eF9woJvV_EQxOJUuv"
     }
     
     qq {
